# candle-ocaml

./: LICENSE  README.md  candle.opam  dune-project
examples/: candle_examples.ml  dune
lib/: dataset.ml  dataset.mli  device.ml  device.mli  dtype.ml  dune  loss.ml  loss.mli  nn.ml  nn.mli  ops.ml  ops.mli  optim.ml  optim.mli  tensor.ml  tensor.mli  var.ml  var.mli
rust/: Cargo.toml  dune
rust/candle-ocaml/: Cargo.toml
rust/candle-ocaml-macros/: Cargo.toml
rust/candle-ocaml-macros/src/: lib.rs
rust/candle-ocaml/src/: candle_types.rs  datasets.rs  device.rs  interop.rs  lib.rs  nn.rs  tensor.rs
test/: dune  tensor_test.ml
