[package]
name = "candle-ocaml"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.3.3", features = ["cuda"] }
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.3.3", features = ["cuda"] }
candle-datasets = { git = "https://github.com/huggingface/candle.git", version = "0.3.3" }
ocaml-interop = "0.10.0"
ocaml-sys = "0.23.0"
candle-ocaml-macros = { path = "../candle-ocaml-macros" }
